localstack-core/localstack/services/stepfunctions/asl/antlr/runtime/LSLParser.py
# Generated from LSLParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LSLParser ( Parser ):

    grammarFileName = "LSLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'States.ALL'", 
                     "'States.DataLimitExceeded'", "'States.HeartbeatTimeout'", 
                     "'States.Timeout'", "'States.TaskFailed'", "'States.Permissions'", 
                     "'States.ResultPathMatchFailure'", "'States.ParameterPathFailure'", 
                     "'States.BranchFailed'", "'States.NoChoiceMatched'", 
                     "'States.IntrinsicFailure'", "'States.ExceedToleratedFailureThreshold'", 
                     "'States.ItemReaderFailed'", "'States.ResultWriterFailed'", 
                     "'States.QueryEvaluationError'", "'->'", "'='", "','", 
                     "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'true'", 
                     "'false'", "'null'", "'where'", "'as'", "'fail'", "'output'", 
                     "'return'", "'error'", "'cause'", "'lambda'", "'arguments'", 
                     "'catch'" ]

    symbolicNames = [ "<INVALID>", "LINECOMMENT", "JSONATA", "ERRORNAMEStatesALL", 
                      "ERRORNAMEStatesDataLimitExceeded", "ERRORNAMEStatesHeartbeatTimeout", 
                      "ERRORNAMEStatesTimeout", "ERRORNAMEStatesTaskFailed", 
                      "ERRORNAMEStatesPermissions", "ERRORNAMEStatesResultPathMatchFailure", 
                      "ERRORNAMEStatesParameterPathFailure", "ERRORNAMEStatesBranchFailed", 
                      "ERRORNAMEStatesNoChoiceMatched", "ERRORNAMEStatesIntrinsicFailure", 
                      "ERRORNAMEStatesExceedToleratedFailureThreshold", 
                      "ERRORNAMEStatesItemReaderFailed", "ERRORNAMEStatesResultWriterFailed", 
                      "ERRORNAMEStatesQueryEvaluationError", "ARROW", "EQUALS", 
                      "COMMA", "COLON", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "TRUE", "FALSE", "NULL", "WHERE", 
                      "AS", "FAIL", "OUTPUT", "RETURN", "ERROR", "CAUSE", 
                      "LAMBDA", "ARGUMENTS", "CATCH", "STRINGPATH", "VAR", 
                      "STRING", "INT", "NUMBER", "IDEN", "WS", "TOK" ]

    RULE_state_machine = 0
    RULE_state_declaration = 1
    RULE_state_call = 2
    RULE_state = 3
    RULE_service_name = 4
    RULE_task_where = 5
    RULE_fail_where = 6
    RULE_arguments = 7
    RULE_catch_block = 8
    RULE_catch_case = 9
    RULE_parameter_list = 10
    RULE_args_assign_list = 11
    RULE_args_assign = 12
    RULE_error = 13
    RULE_cause = 14
    RULE_var_assign = 15
    RULE_json_value = 16
    RULE_json_object = 17
    RULE_json_binding = 18
    RULE_json_arr = 19
    RULE_json_value_lit = 20
    RULE_string_or_jsonata = 21
    RULE_error_name = 22

    ruleNames =  [ "state_machine", "state_declaration", "state_call", "state", 
                   "service_name", "task_where", "fail_where", "arguments", 
                   "catch_block", "catch_case", "parameter_list", "args_assign_list", 
                   "args_assign", "error", "cause", "var_assign", "json_value", 
                   "json_object", "json_binding", "json_arr", "json_value_lit", 
                   "string_or_jsonata", "error_name" ]

    EOF = Token.EOF
    LINECOMMENT=1
    JSONATA=2
    ERRORNAMEStatesALL=3
    ERRORNAMEStatesDataLimitExceeded=4
    ERRORNAMEStatesHeartbeatTimeout=5
    ERRORNAMEStatesTimeout=6
    ERRORNAMEStatesTaskFailed=7
    ERRORNAMEStatesPermissions=8
    ERRORNAMEStatesResultPathMatchFailure=9
    ERRORNAMEStatesParameterPathFailure=10
    ERRORNAMEStatesBranchFailed=11
    ERRORNAMEStatesNoChoiceMatched=12
    ERRORNAMEStatesIntrinsicFailure=13
    ERRORNAMEStatesExceedToleratedFailureThreshold=14
    ERRORNAMEStatesItemReaderFailed=15
    ERRORNAMEStatesResultWriterFailed=16
    ERRORNAMEStatesQueryEvaluationError=17
    ARROW=18
    EQUALS=19
    COMMA=20
    COLON=21
    LPAREN=22
    RPAREN=23
    LBRACK=24
    RBRACK=25
    LBRACE=26
    RBRACE=27
    TRUE=28
    FALSE=29
    NULL=30
    WHERE=31
    AS=32
    FAIL=33
    OUTPUT=34
    RETURN=35
    ERROR=36
    CAUSE=37
    LAMBDA=38
    ARGUMENTS=39
    CATCH=40
    STRINGPATH=41
    VAR=42
    STRING=43
    INT=44
    NUMBER=45
    IDEN=46
    WS=47
    TOK=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class State_machineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LSLParser.EOF, 0)

        def state_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.State_declarationContext)
            else:
                return self.getTypedRuleContext(LSLParser.State_declarationContext,i)


        def var_assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.Var_assignContext)
            else:
                return self.getTypedRuleContext(LSLParser.Var_assignContext,i)


        def state_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.State_callContext)
            else:
                return self.getTypedRuleContext(LSLParser.State_callContext,i)


        def getRuleIndex(self):
            return LSLParser.RULE_state_machine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_machine" ):
                listener.enterState_machine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_machine" ):
                listener.exitState_machine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_machine" ):
                return visitor.visitState_machine(self)
            else:
                return visitor.visitChildren(self)




    def state_machine(self):

        localctx = LSLParser.State_machineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_state_machine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 46
                    self.state_declaration()
                    pass

                elif la_ == 2:
                    self.state = 47
                    self.var_assign()
                    pass

                elif la_ == 3:
                    self.state = 48
                    self.state_call()
                    pass


                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 70686571757568) != 0)):
                    break

            self.state = 53
            self.match(LSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(LSLParser.IDEN, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(LSLParser.Parameter_listContext,0)


        def EQUALS(self):
            return self.getToken(LSLParser.EQUALS, 0)

        def state_(self):
            return self.getTypedRuleContext(LSLParser.StateContext,0)


        def getRuleIndex(self):
            return LSLParser.RULE_state_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_declaration" ):
                listener.enterState_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_declaration" ):
                listener.exitState_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_declaration" ):
                return visitor.visitState_declaration(self)
            else:
                return visitor.visitChildren(self)




    def state_declaration(self):

        localctx = LSLParser.State_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_state_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(LSLParser.IDEN)
            self.state = 56
            self.parameter_list()
            self.state = 57
            self.match(LSLParser.EQUALS)
            self.state = 58
            self.state_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LSLParser.RULE_state_call

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class State_call_templateContext(State_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LSLParser.State_callContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDEN(self):
            return self.getToken(LSLParser.IDEN, 0)
        def args_assign_list(self):
            return self.getTypedRuleContext(LSLParser.Args_assign_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_call_template" ):
                listener.enterState_call_template(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_call_template" ):
                listener.exitState_call_template(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_call_template" ):
                return visitor.visitState_call_template(self)
            else:
                return visitor.visitChildren(self)


    class State_call_anonymousContext(State_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LSLParser.State_callContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def state_(self):
            return self.getTypedRuleContext(LSLParser.StateContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_call_anonymous" ):
                listener.enterState_call_anonymous(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_call_anonymous" ):
                listener.exitState_call_anonymous(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_call_anonymous" ):
                return visitor.visitState_call_anonymous(self)
            else:
                return visitor.visitChildren(self)


    class State_call_namedContext(State_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LSLParser.State_callContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDEN(self):
            return self.getToken(LSLParser.IDEN, 0)
        def AS(self):
            return self.getToken(LSLParser.AS, 0)
        def state_(self):
            return self.getTypedRuleContext(LSLParser.StateContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_call_named" ):
                listener.enterState_call_named(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_call_named" ):
                listener.exitState_call_named(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_call_named" ):
                return visitor.visitState_call_named(self)
            else:
                return visitor.visitChildren(self)



    def state_call(self):

        localctx = LSLParser.State_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_state_call)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = LSLParser.State_call_templateContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(LSLParser.IDEN)
                self.state = 61
                self.args_assign_list()
                pass

            elif la_ == 2:
                localctx = LSLParser.State_call_namedContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(LSLParser.IDEN)
                self.state = 63
                self.match(LSLParser.AS)
                self.state = 64
                self.state_()
                pass

            elif la_ == 3:
                localctx = LSLParser.State_call_anonymousContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.state_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LSLParser.RULE_state

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class State_failContext(StateContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LSLParser.StateContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FAIL(self):
            return self.getToken(LSLParser.FAIL, 0)
        def fail_where(self):
            return self.getTypedRuleContext(LSLParser.Fail_whereContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_fail" ):
                listener.enterState_fail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_fail" ):
                listener.exitState_fail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_fail" ):
                return visitor.visitState_fail(self)
            else:
                return visitor.visitChildren(self)


    class State_returnContext(StateContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LSLParser.StateContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(LSLParser.RETURN, 0)
        def json_value(self):
            return self.getTypedRuleContext(LSLParser.Json_valueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_return" ):
                listener.enterState_return(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_return" ):
                listener.exitState_return(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_return" ):
                return visitor.visitState_return(self)
            else:
                return visitor.visitChildren(self)


    class State_taskContext(StateContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LSLParser.StateContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def service_name(self):
            return self.getTypedRuleContext(LSLParser.Service_nameContext,0)

        def COLON(self):
            return self.getToken(LSLParser.COLON, 0)
        def IDEN(self):
            return self.getToken(LSLParser.IDEN, 0)
        def task_where(self):
            return self.getTypedRuleContext(LSLParser.Task_whereContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_task" ):
                listener.enterState_task(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_task" ):
                listener.exitState_task(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_task" ):
                return visitor.visitState_task(self)
            else:
                return visitor.visitChildren(self)



    def state_(self):

        localctx = LSLParser.StateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_state)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                localctx = LSLParser.State_taskContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.service_name()
                self.state = 69
                self.match(LSLParser.COLON)
                self.state = 70
                self.match(LSLParser.IDEN)
                self.state = 71
                self.task_where()
                pass
            elif token in [33]:
                localctx = LSLParser.State_failContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(LSLParser.FAIL)
                self.state = 74
                self.fail_where()
                pass
            elif token in [35]:
                localctx = LSLParser.State_returnContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.match(LSLParser.RETURN)
                self.state = 76
                self.json_value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Service_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAMBDA(self):
            return self.getToken(LSLParser.LAMBDA, 0)

        def getRuleIndex(self):
            return LSLParser.RULE_service_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService_name" ):
                listener.enterService_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService_name" ):
                listener.exitService_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitService_name" ):
                return visitor.visitService_name(self)
            else:
                return visitor.visitChildren(self)




    def service_name(self):

        localctx = LSLParser.Service_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_service_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(LSLParser.LAMBDA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Task_whereContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(LSLParser.WHERE, 0)

        def arguments(self):
            return self.getTypedRuleContext(LSLParser.ArgumentsContext,0)


        def catch_block(self):
            return self.getTypedRuleContext(LSLParser.Catch_blockContext,0)


        def getRuleIndex(self):
            return LSLParser.RULE_task_where

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask_where" ):
                listener.enterTask_where(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask_where" ):
                listener.exitTask_where(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask_where" ):
                return visitor.visitTask_where(self)
            else:
                return visitor.visitChildren(self)




    def task_where(self):

        localctx = LSLParser.Task_whereContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_task_where)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(LSLParser.WHERE)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 82
                self.arguments()


            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 85
                self.catch_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fail_whereContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(LSLParser.WHERE, 0)

        def error(self):
            return self.getTypedRuleContext(LSLParser.ErrorContext,0)


        def cause(self):
            return self.getTypedRuleContext(LSLParser.CauseContext,0)


        def getRuleIndex(self):
            return LSLParser.RULE_fail_where

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFail_where" ):
                listener.enterFail_where(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFail_where" ):
                listener.exitFail_where(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFail_where" ):
                return visitor.visitFail_where(self)
            else:
                return visitor.visitChildren(self)




    def fail_where(self):

        localctx = LSLParser.Fail_whereContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fail_where)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(LSLParser.WHERE)
            self.state = 89
            self.error()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 90
                self.cause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARGUMENTS(self):
            return self.getToken(LSLParser.ARGUMENTS, 0)

        def json_value(self):
            return self.getTypedRuleContext(LSLParser.Json_valueContext,0)


        def getRuleIndex(self):
            return LSLParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = LSLParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arguments)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(LSLParser.ARGUMENTS)
            self.state = 94
            self.json_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Catch_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CATCH(self):
            return self.getToken(LSLParser.CATCH, 0)

        def LBRACE(self):
            return self.getToken(LSLParser.LBRACE, 0)

        def catch_case(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.Catch_caseContext)
            else:
                return self.getTypedRuleContext(LSLParser.Catch_caseContext,i)


        def RBRACE(self):
            return self.getToken(LSLParser.RBRACE, 0)

        def getRuleIndex(self):
            return LSLParser.RULE_catch_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCatch_block" ):
                listener.enterCatch_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCatch_block" ):
                listener.exitCatch_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCatch_block" ):
                return visitor.visitCatch_block(self)
            else:
                return visitor.visitChildren(self)




    def catch_block(self):

        localctx = LSLParser.Catch_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_catch_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(LSLParser.CATCH)
            self.state = 97
            self.match(LSLParser.LBRACE)
            self.state = 98
            self.catch_case()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093284344) != 0):
                self.state = 99
                self.catch_case()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(LSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Catch_caseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def error_name(self):
            return self.getTypedRuleContext(LSLParser.Error_nameContext,0)


        def ARROW(self):
            return self.getToken(LSLParser.ARROW, 0)

        def state_call(self):
            return self.getTypedRuleContext(LSLParser.State_callContext,0)


        def getRuleIndex(self):
            return LSLParser.RULE_catch_case

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCatch_case" ):
                listener.enterCatch_case(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCatch_case" ):
                listener.exitCatch_case(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCatch_case" ):
                return visitor.visitCatch_case(self)
            else:
                return visitor.visitChildren(self)




    def catch_case(self):

        localctx = LSLParser.Catch_caseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_catch_case)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.error_name()
            self.state = 108
            self.match(LSLParser.ARROW)
            self.state = 109
            self.state_call()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(LSLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LSLParser.RPAREN, 0)

        def IDEN(self, i:int=None):
            if i is None:
                return self.getTokens(LSLParser.IDEN)
            else:
                return self.getToken(LSLParser.IDEN, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LSLParser.COMMA)
            else:
                return self.getToken(LSLParser.COMMA, i)

        def getRuleIndex(self):
            return LSLParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = LSLParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(LSLParser.LPAREN)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 112
                self.match(LSLParser.IDEN)


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 115
                self.match(LSLParser.COMMA)
                self.state = 116
                self.match(LSLParser.IDEN)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(LSLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Args_assign_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(LSLParser.LPAREN, 0)

        def args_assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.Args_assignContext)
            else:
                return self.getTypedRuleContext(LSLParser.Args_assignContext,i)


        def RPAREN(self):
            return self.getToken(LSLParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LSLParser.COMMA)
            else:
                return self.getToken(LSLParser.COMMA, i)

        def getRuleIndex(self):
            return LSLParser.RULE_args_assign_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs_assign_list" ):
                listener.enterArgs_assign_list(self)
